--- a/Landing page.html
+++ b/Landing page.html
@@ -28,6 +28,8 @@
     <li>Orlando Ballard</li>
     <li>Alexander Photiou</li>
     <li>Nikita Markov</li>
+    <li>Constantinos koliaros</li>
+        
 </ul>
 
 <h3>Our Project aims to develop a fully functional Treasure Hunt Web app.</h3>
