--- a/Landing page.html
+++ b/Landing page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Team Team Landing Page</title>
+    <title>index</title>
     <link rel="stylesheet" type="text/css" href="header.css" />
     <link rel="stylesheet" type="text/css" href="footer.css" />
     <link rel="stylesheet" type="text/css" href="main.css" />
