--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="header-main" id="header">
     <div class="header-main-logo">
         <img src="png/Logo-Color.png" alt="logo Uni">
-        <div class="header-main-name">fgfd</div>
+        <div class="header-main-name">Treasure hunt</div>
     </div>
     <nav class="header-main-nav">
         <ul class="logoList">
