Deleting useless staff, fixed landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header class="header-main" id="header">
     <div class="header-main-logo">
-        <img src="png/Logo-Color.png" alt="logo Uni">
+        <img src="png/Logo-Color.png" alt="logo Uni"> 
         <div class="header-main-name">Treasure hunt</div>
     </div>
     <nav class="header-main-nav">
@@ -22,8 +22,11 @@
         <div>
 </header>
 
-    
-<h2>Team Members Include:</h2>
+<main>
+<div class="frontPage">
+<h1>Team Members Include:</h1>
+
+<div class="teamTable">
 <ul>
     <li>Orlando Ballard</li>
     <li>Alexander Photiou</li>
@@ -31,23 +34,28 @@
     <li>Constantinos koliaros</li>
         
 </ul>
+</div>
 
-<h3>Our Project aims to develop a fully functional Treasure Hunt Web app.</h3>
+<h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
 
-<h2>Our Social media efforts: (TBD)</h2>
+<h1>Our Social media efforts:</h1>
+<div class="socialNetworksTable">
+    <ul>
+        <li>Facebook</li>
+        <li>Twitter</li>
+        <li>Instagram</li>
+    </ul>
+</div>
 
-<button type="button">Try Our Game!</button>
 
 <h2>Team Meeting Logs:</h2>
-<ul>
-    <li>Setup the Github Repository.</li>
-</ul>
+<p>Setting up Github Repository: </p>
+</div>
+
+</main>
 
 <footer id="footer">
 </footer>
-
-
-<script src="js/htmlToJSFooter.js"></script>
 
 </body>
 </html>
