--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </div>
     <nav class="header-main-nav">
         <ul class="logoList">
+            <li><a href="list.html">List</a></li>
+            <li><a href="">Example</a></li>
+            <li><a href="">Example</a></li>
+            <li><a href="">Example</a></li>
         </ul>
     </nav>
     <div class="burger-menu-button">
