--- a/list.html
+++ b/list.html
@@ -3,42 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        #treasureHunts {
-            list-style-type: none;
-        }
-        #treasureHunts li {
-            border: 1px solid black;
-            padding: 10px 15px;
-            border-radius: 10px;
-            background-color: lightgray;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="header.css" />
+    <link rel="stylesheet" type="text/css" href="footer.css" />
+    <link rel="stylesheet" type="text/css" href="list.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+
 </head>
 <body>
 
+
+<header class="header-main" id="header">
+    <div class="header-main-logo">
+        <img src="png/Logo-Color.png" alt="logo Uni">
+        <div class="header-main-name">Treasure hunt</div>
+    </div>
+    <nav class="header-main-nav">
+        <ul class="logoList">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">Example</a></li>
+            <li><a href="">Example</a></li>
+            <li><a href="">Example</a></li>
+        </ul>
+    </nav>
+    <div class="burger-menu-button">
+        <div>
+</header>
+
+    
+<main>
 <ul id="treasureHunts">
-
 </ul>
+</main>
 
-<script>
-    let treasureHuntsListElement = document.getElementById("treasureHunts");
-    fetch("https://codecyprus.org/th/api/list")
-    .then(response => response.json())
-    .then(jsonObject => {
-        let html = "";
-        for (let i = 0; i < jsonObject.treasureHunts.length; i++) {
-            html += `<li onclick="handleClick('${jsonObject.treasureHunts[i].uuid}')">${jsonObject.treasureHunts[i].name}</li>`;
-        }
-        treasureHuntsListElement.innerHTML = html;
-    });
 
-    function handleClick(uuid) {
-        location.href = "start.html?uuid=" + uuid
-    }
-</script>
+
+<footer id="footer">
+</footer>
 
 </body>
 </html>
+
+<script src='list.js'></script>
