--- a/start.html
+++ b/start.html
@@ -2,21 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start</title>
+    <link rel="stylesheet" type="text/css" href="header.css" />
+    <link rel="stylesheet" type="text/css" href="footer.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="start.css" />
 </head>
 <body>
 
-<script>
-    let params = new URLSearchParams(location.search);
-    let treasureHuntID = params.get("uuid");
-    console.log(treasureHuntID);
-</script>
+<header class="header-main" id="header">
+    <div class="header-main-logo">
+        <img src="png/Logo-Color.png" alt="logo Uni">
+        <div class="header-main-name">Treasure hunt</div>
+    </div>
+    <nav class="header-main-nav">
+        <ul class="logoList">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">Example</a></li>
+            <li><a href="">Example</a></li>
+            <li><a href="">Example</a></li>
+        </ul>
+    </nav>
+    <div class="burger-menu-button">
+        <div>
+</header>
 
+<main>
 
-<input type="text" id="playerName" name="playerName" />
-<input type="button" value="Start" onclick="" />
+<input class="errorMessagesSize" type="text" id="playerName" name="playerName" />
+<input class="errorMessagesSize" type="button" value="Start" onclick="addWordToStorage()" />
 
+</main>
 
+<footer id="footer">
+</footer>
 
 </body>
 </html>
+
+
+<script src='start.js'></script>
