Creation of burger-menu
In order to make a web app responsive, was created a burger menu, which can be seen if you use mobile phone

--- a/list.html
+++ b/list.html
@@ -30,6 +30,16 @@
         <div>
 </header>
 
+<!--Burger menu-->
+<nav class="burger-menu">
+    <ul>
+        <li><a href="list.html">List</a></li>
+        <li><a href="">Example</a></li>
+        <li><a href="">Example</a></li>
+        <li><a href="">Example</a></li>
+    </ul>
+</nav>
+
     
 <main>
 <ul id="treasureHunts">
@@ -45,3 +55,4 @@
 </html>
 
 <script src='list.js'></script>
+<script src='burger-menu.js'></script>
