--- a/start.html
+++ b/start.html
@@ -28,6 +28,16 @@
         <div>
 </header>
 
+<!--Burger menu-->
+<nav class="burger-menu">
+    <ul>
+        <li><a href="list.html">List</a></li>
+        <li><a href="">Example</a></li>
+        <li><a href="">Example</a></li>
+        <li><a href="">Example</a></li>
+    </ul>
+</nav>
+
 <main>
 
 <input class="errorMessagesSize" type="text" id="playerName" name="playerName" />
@@ -43,3 +53,4 @@
 
 
 <script src='start.js'></script>
+<script src='burger-menu.js'></script>
