--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
             <li><a href="">Example</a></li>
         </ul>
     </nav>
-    <div class="burger-menu-button">
+    <div class="burger-menu-button"> <!-- img of burger menu must be changed -->
         <div>
 </header>
+
+<!--Burger menu-->
+<nav class="burger-menu">
+    <ul>
+        <li><a href="list.html">List</a></li>
+        <li><a href="">Example</a></li>
+        <li><a href="">Example</a></li>
+        <li><a href="">Example</a></li>
+    </ul>
+</nav>
 
 <main>
 <div class="frontPage">
@@ -64,3 +74,5 @@
 
 </body>
 </html>
+
+<script src='burger-menu.js'></script>
