small changes of question api

--- a/question.html
+++ b/question.html
@@ -41,6 +41,9 @@
 
   <main>
 
+
+   <ul id="question"></ul>
+
   </main>
 
   <footer id="footer">
@@ -51,3 +54,4 @@
 </html>
 
 <script src='js/burger-menu.js'></script>
+<script src='js/question.js'></script>
