--- a/app.html
+++ b/app.html
@@ -42,8 +42,19 @@
 
     
 <main>
+
+<input class="errorMessagesSize" type="text" id="playerName" name="playerName" />
+<input class="errorMessagesSize" id="nameButton" type="button" value="Start" />
+
+
+<ul id="startTest"></ul>
+
+
 <ul id="treasureHunts">
 </ul>
+
+
+<ul id="questionField"></ul>
 </main>
 
 
@@ -55,4 +66,6 @@
 </html>
 
 <script src='js/list.js'></script>
+<script src='js/start.js'></script>
+<script src='js/question.js'></script>
 <script src='js/burger-menu.js'></script>
