small fixes, combining some files

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav class="header-main-nav">
         <ul class="logoList">
             <li><a href="index.html">Main page</a></li>
-            <li><a href="">Help</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li><a href="test.html">Test</a></li>
             
         </ul>
     </nav>
@@ -31,8 +31,8 @@
 <nav class="burger-menu">
     <ul>
         <li><a href="index.html">Main page</a></li>
-        <li><a href="">Help</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="notes.html">Notes</a></li>
+        <li><a href="test.html">Test</a></li>
         
     </ul>
 </nav>
@@ -63,8 +63,6 @@
 </div>
 
 
-<h2>Team Meeting Logs:</h2>
-<p>Setting up Github Repository: </p>
 <button id="buttonStart">Let's get started!</button>
 </div>
 </main>
@@ -75,5 +73,11 @@
 </body>
 </html>
 
+<script>
+    document.getElementById('buttonStart').addEventListener('click', function () {
+        window.location.href = 'app.html';
+    });
+
+</script>
+
 <script src='js/burger-menu.js'></script>
-<script src='js/index.js'></script>
