Logo for the app, css styling background, js variables for testing

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="stylesheet" type="text/css" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" href="css/footer.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 
 <header class="header-main" id="header">
     <div class="header-main-logo">
-        <img src="png/Logo-Color.png" alt="logo Uni"> 
+        <img src="/logo.png" alt="logo Uni"> 
         <div class="header-main-name">Treasure hunt</div>
     </div>
     <nav class="header-main-nav">
@@ -62,7 +61,6 @@
     </ul>
 </div>
 
-
 <button id="buttonStart">Let's get started!</button>
 </div>
 </main>
@@ -70,8 +68,7 @@
 <footer id="footer">
 </footer>
 
-</body>
-</html>
+
 
 <script>
     document.getElementById('buttonStart').addEventListener('click', function () {
@@ -81,3 +78,7 @@
 </script>
 
 <script src='js/burger-menu.js'></script>
+
+</body>
+</html>
+
