--- a/test.html
+++ b/test.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test</title>
   <link rel="stylesheet" type="text/css" href="css/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/footer.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
+  
+  
 </head>
 
 <body>
 
   <header class="header-main" id="header">
     <div class="header-main-logo">
-      <img src="png/Logo-Color.png" alt="logo Uni">
+      <img src="/logo.png" alt="logo Uni">
       <div class="header-main-name">Treasure hunt</div>
     </div>
     <nav class="header-main-nav">
@@ -48,7 +49,7 @@
 
 </body>
 
+<script src='js/burger-menu.js'></script>
+
 </html>
 
-<script src='js/burger-menu.js'></script>
-<script src='js/index.js'></script>
