images in folder

--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
 
     <header class="header-main" id="header">
         <div class="header-main-logo">
-            <img src="/logo.png" alt="logo Uni">
+            <img src="images/logo.png" alt="logo Uni">
             <div class="header-main-name">Treasure hunt</div>
         </div>
         <nav class="header-main-nav">
