--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>index</title>
     <link rel="stylesheet" type="text/css" href="css/header.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -23,7 +24,7 @@
         </ul>
     </nav>
     <div class="burger-menu-button"> <!-- img of burger menu must be changed -->
-        <div>
+        </div>
 </header>
 
 <!--Burger menu-->
@@ -55,9 +56,9 @@
 <h1>Our Social media efforts:</h1>
 <div class="socialNetworksTable">
     <ul>
-        <li>Facebook</li>
-        <li>Twitter</li>
-        <li>Instagram</li>
+        <a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://twitter.com/TeamBestTeam4" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/computer_legends1/" target="_blank"><i class="fab fa-instagram"></i></a>
     </ul>
 </div>
 
