--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
 <h1>Our Social media efforts:</h1>
 <div class="socialNetworksTable">
     <ul>
-        <a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><i class="fab fa-youtube"></i></a>
-        <a href="https://twitter.com/TeamBestTeam4" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/computer_legends1/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
+                src="images/Youtube_logo new.png" height="150" width="150"/></a>
+        <a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/x new logo.png" height="150"
+                                                                         width="150"/></a>
+        <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
+                src="images/instagram-logo-icone4.png" height="150" width="150"/></a>
     </ul>
 </div>
 
