General fixes to landing page

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
 <div class="frontPage">
 <h1>Team Members Include:</h1>
 
-<div class="teamTable">
+<div class="FrontPage">
 <ul>
-    <li>Orlando Ballard</li>
-    <li>Alexander Photiou</li>
-    <li>Nikita Markov</li>
-    <li>Constantinos koliaros</li>
+
+    <h1>Orlando Ballard</h1><br>
+    <h1>Alexander Photiou</h1><br>
+    <h1>Nikita Markov</h1><br>
+    <h1>Constantinos koliaros</h1><br>
+
         
 </ul>
 </div>
