--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <main>
 <div class="frontPage">
-<h1>Team Members Include:</h1>
+<h1>Team Members Include:</h1><br>
 
 <div class="FrontPage">
 <ul>
@@ -53,21 +53,21 @@
 </ul>
 </div>
 
-<h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
+<br><br><br><h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
 
-<h1>Our Social media efforts:</h1>
+<br><br><br><h1>Our Social media efforts:</h1>
 <div class="socialNetworksTable">
     <ul>
-        <a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
-                src="images/Youtube_logo new.png" height="150" width="150"/></a>
-        <a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/x new logo.png" height="150"
-                                                                         width="150"/></a>
-        <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
-                src="images/instagram-logo-icone4.png" height="150" width="150"/></a>
+        <br><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
+                src="images/Youtube_logo new.png" height="150" width="150"/></a><br>
+        <br><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/x new logo.png" height="150"
+                                                                         width="150"/></a><br>
+        <br><a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
+                src="images/instagram-logo-icone4.png" height="150" width="150"/></a><br>
     </ul>
 </div>
 
-<button id="buttonStart">Let's get started!</button>
+<br><br><br><button id="buttonStart">Let's get started!</button>
 </div>
 </main>
 
