fixing code errors

--- a/test.html
+++ b/test.html
@@ -26,8 +26,7 @@
 
       </ul>
     </nav>
-    <div class="burger-menu-button"> <!-- img of burger menu must be changed -->
-      <div>
+    <div class="burger-menu-button"></div> <!-- img of burger menu must be changed -->
   </header>
 
   <!--Burger menu-->
