--- a/app.html
+++ b/app.html
@@ -25,8 +25,7 @@
 
             </ul>
         </nav>
-        <div class="burger-menu-button">
-            <div>
+        <div class="burger-menu-button"></div>
     </header>
 
     <!--Burger menu-->
