--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <li>Alexander Photiou</li>
     <li>Nikita Markov</li>
     <li>Constantinos koliaros</li>
+    <li>Giorgos Poullou</li>
         
 </ul>
 </div>
