js changes of reading api

--- a/app.html
+++ b/app.html
@@ -45,7 +45,7 @@
 
         <ul class="userInput" style="display: none;">
             <input class="errorMessagesSize" type="text" id="playerName" name="playerName" />
-            <input class="errorMessagesSize" id="nameButton" type="button" value="Start" />
+            <input class="errorMessagesSize" id="nameButton" type="button" onclick="start()" value="Start" />
 
         </ul>
 
