--- a/app.html
+++ b/app.html
@@ -65,6 +65,7 @@
     </footer>
 
     <script src='js/regPage.js'></script>
+    <script src='js/questionPage.js'></script>
     <script src='js/burger-menu.js'></script>
     
 </body>
