--- a/app.html
+++ b/app.html
@@ -15,6 +15,7 @@
         <div class="header-main-logo">
             <img src="images/logo.png" alt="logo Uni">
             <div class="header-main-name">Treasure hunt</div>
+            <div class="header-main-name" id="score"></div>
         </div>
         <nav class="header-main-nav">
             <ul class="logoList">
