Fixed stretching of logo image in smaller screen sizes Fixed error causing burger menu image to not appear
Rearraged Logos and Team Members to be in the footer of the Page. Im planning on adding more into the main page in the future.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <header class="header-main" id="header">
     <div class="header-main-logo">
         <img src="images/logo.png" alt="logo Uni"> 
-        <div class="header-main-name">Treasure hunt</div>
+        <div class="header-main-name">Treasure Hunt</div>
     </div>
     <nav class="header-main-nav">
         <ul class="logoList">
             <li><a href="index.html">Main page</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="test.html">Test</a></li>
-            
+
         </ul>
     </nav>
-    <div class="burger-menu-button"> <!-- img of burger menu must be changed -->
+    <div class="burger-menu-button">
         </div>
 </header>
 
@@ -39,37 +39,33 @@
 
 <main>
 <div class="frontPage">
-<h1>Team Members Include:</h1>
-
-<div class="teamTable">
-<ul>
-    <li>Orlando Ballard</li>
-    <li>Alexander Photiou</li>
-    <li>Nikita Markov</li>
-    <li>Constantinos koliaros</li>
-        
-</ul>
-</div>
-
 <h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
-
-<h1>Our Social media efforts:</h1>
-<div class="socialNetworksTable">
-    <ul>
-        <a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
-                src="images/Youtube_logo new.png" height="150" width="150"/></a>
-        <a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/x new logo.png" height="150"
-                                                                         width="150"/></a>
-        <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
-                src="images/instagram-logo-icone4.png" height="150" width="150"/></a>
-    </ul>
-</div>
-
 <button id="buttonStart">Let's get started!</button>
 </div>
 </main>
 
 <footer id="footer">
+    <div class="socialNetworksTable">
+        <ul>
+            <li><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
+                    src="images/Youtube_logo new.png" height="auto" width="100%"/></a></li>
+            <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img
+                    src="images/x new logo.png"  height="auto" width="100%"/></a></li>
+            <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
+                    src="images/instagram-logo-icone4.png" height="auto" width="100%"/></a></li>
+        </ul>
+    </div>
+
+    <div class="teamTable">
+        <ul>
+            <li><h1>Team Members Include:</h1></li>
+            <li>Orlando Ballard</li>
+            <li>Alexander Photiou</li>
+            <li>Nikita Markov</li>
+            <li>Constantinos koliaros</li>
+
+        </ul>
+    </div>
 </footer>
 
 
