--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li>Alexander Photiou</li>
             <li>Nikita Markov</li>
             <li>Constantinos koliaros</li>
-
+            <li>Giorgos Poullou</li>
         </ul>
     </div>
 </footer>
