--- a/index.html
+++ b/index.html
@@ -1,85 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="stylesheet" type="text/css" href="css/header.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
-<header class="header-main" id="header">
-    <div class="header-main-logo">
-        <img src="images/logo.png" alt="logo Uni"> 
-        <div class="header-main-name">Treasure Hunt</div>
-    </div>
-    <nav class="header-main-nav">
-        <ul class="logoList">
+    <header class="header-main" id="header">
+        <div class="header-main-logo">
+            <img src="images/logo.png" alt="logo Uni">
+            <div class="header-main-name">Treasure Hunt</div>
+        </div>
+        <nav class="header-main-nav">
+            <ul class="logoList">
+                <li><a href="index.html">Main page</a></li>
+                <li><a href="notes.html">Notes</a></li>
+                <li><a href="test.html">Test</a></li>
+
+            </ul>
+        </nav>
+        <div class="burger-menu-button">
+        </div>
+    </header>
+
+    <!--Burger menu-->
+    <nav class="burger-menu">
+        <ul>
             <li><a href="index.html">Main page</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="test.html">Test</a></li>
 
         </ul>
     </nav>
-    <div class="burger-menu-button">
+
+    <main>
+        <div class="frontPage">
+            <h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
+            <button id="buttonStart">Let's get started!</button>
         </div>
-</header>
+    </main>
 
-<!--Burger menu-->
-<nav class="burger-menu">
-    <ul>
-        <li><a href="index.html">Main page</a></li>
-        <li><a href="notes.html">Notes</a></li>
-        <li><a href="test.html">Test</a></li>
-        
-    </ul>
-</nav>
+    <footer id="footer">
+        <div class="socialNetworksTable">
+            <ul>
+                <li><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
+                            src="images/Youtube_logo new.png" height="auto" width="100%" /></a></li>
+                <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/x new logo.png"
+                            height="auto" width="100%" /></a></li>
+                <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
+                            src="images/instagram-logo-icone4.png" height="auto" width="100%" /></a></li>
+            </ul>
+        </div>
 
-<main>
-<div class="frontPage">
-<h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
-<button id="buttonStart">Let's get started!</button>
-</div>
-</main>
-
-<footer id="footer">
-    <div class="socialNetworksTable">
-        <ul>
-            <li><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
-                    src="images/Youtube_logo new.png" height="auto" width="100%"/></a></li>
-            <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img
-                    src="images/x new logo.png"  height="auto" width="100%"/></a></li>
-            <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
-                    src="images/instagram-logo-icone4.png" height="auto" width="100%"/></a></li>
-        </ul>
-    </div>
-
-    <div class="teamTable">
-        <ul>
-            <li><h1>Team Members Include:</h1></li>
-            <li>Orlando Ballard</li>
-            <li>Alexander Photiou</li>
-            <li>Nikita Markov</li>
-            <li>Constantinos koliaros</li>
-            <li>Giorgos Poullou</li>
-        </ul>
-    </div>
-</footer>
+        <div class="teamTable">
+            <ul>
+                <li>
+                    <h1>Team Members Include:</h1>
+                </li>
+                <li>Orlando Ballard</li>
+                <li>Alexander Photiou</li>
+                <li>Nikita Markov</li>
+                <li>Constantinos koliaros</li>
+                <li>Giorgos Poullou</li>
+            </ul>
+        </div>
+    </footer>
 
 
 
-<script>
-    document.getElementById('buttonStart').addEventListener('click', function () {
-        window.location.href = 'app.html';
-    });
+    <script>
+        document.getElementById('buttonStart').addEventListener('click', function () {
+            window.location.href = 'app.html';
+        });
 
-</script>
 
-<script src='js/burger-menu.js'></script>
-<script src="js/questionPage.js"></script>
+        function getLocation() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(showPosition);
+                } else {
+                    alert("Geolocation is not supported by your browser.");
+                }
+            }
+
+            function showPosition(position) {
+                alert("Latitude: " + position.coords.latitude + ", Longitude: " + position.coords.longitude);
+            }
+
+            getLocation();
+
+    </script>
+
+    <script src='js/burger-menu.js'></script>
 
 </body>
-</html>
 
+</html>
