basic cookies(broken for now)

--- a/app.html
+++ b/app.html
@@ -65,9 +65,10 @@
     <footer id="footer">
     </footer>
 
+    <script src='js/burger-menu.js'></script> 
+    <script src="js/cookies.js"></script>
     <script src='js/regPage.js'></script> 
     <script src='js/questionPage.js'></script>
-    <script src='js/burger-menu.js'></script> 
 
 </body>
 
