--- a/index.html
+++ b/index.html
@@ -82,23 +82,29 @@
         });
 
 
-        function getLocation() {
+        document.addEventListener('DOMContentLoaded', function () {
+                getLocation();
+            });
+
+            function getLocation() {
                 if (navigator.geolocation) {
                     navigator.geolocation.getCurrentPosition(showPosition);
-                } else {
+                }
+                else {
                     alert("Geolocation is not supported by your browser.");
                 }
             }
 
             function showPosition(position) {
-                alert("Latitude: " + position.coords.latitude + ", Longitude: " + position.coords.longitude);
-            }
-
-            getLocation();
+                    alert("Latitude: " + position.coords.latitude + ", Longitude: " + position.coords.longitude);
+                    setCookie('latitude', position.coords.latitude, 1); 
+                    setCookie('longitude', position.coords.longitude, 1);
+                }
 
     </script>
 
     <script src='js/burger-menu.js'></script>
+    <script src="js/cookies.js"></script>
 
 </body>
 
