--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                             height="auto" width="100%" /></a></li>
                 <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
                             src="images/instagram-logo-icone4.png" height="auto" width="100%" /></a></li>
+                <li> <a href="https://github.com/Desire32/Treasure-Hunt-Web-App" target="_blank"><img
+                            src="images/github.png" height="auto" width="100%" /></a></li>
             </ul>
         </div>
 
@@ -73,29 +75,29 @@
 
     <script>
 
-         document.getElementById('buttonStart').addEventListener('click', function () {
-                window.location.href = 'app.html';
-            });
-            
+        document.getElementById('buttonStart').addEventListener('click', function () {
+            window.location.href = 'app.html';
+        });
+
         document.addEventListener('DOMContentLoaded', function () {
-            
-                let latitude = getCookie('latitude');
-                let longitude = getCookie('longitude');
-                if (!latitude || !longitude) {
-                    getLocation();
-                }
-            });
 
-            function getLocation() {
-                if (navigator.geolocation) {
-                    navigator.geolocation.getCurrentPosition(showPosition);
-                }
+            let latitude = getCookie('latitude');
+            let longitude = getCookie('longitude');
+            if (!latitude || !longitude) {
+                getLocation();
             }
+        });
 
-            function showPosition(position, sessionID) {
-                setCookie('latitude', position.coords.latitude, 1);
-                setCookie('longitude', position.coords.longitude, 1);
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition);
             }
+        }
+
+        function showPosition(position, sessionID) {
+            setCookie('latitude', position.coords.latitude, 1);
+            setCookie('longitude', position.coords.longitude, 1);
+        }
 
     </script>
 
