--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html">Main page</a></li>
                 <li><a href="notes.html">Notes</a></li>
                 <li><a href="test.html">Test</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
 
             </ul>
         </nav>
@@ -34,6 +35,7 @@
             <li><a href="index.html">Main page</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="test.html">Test</a></li>
+            <li><a href="leaderboard.html">Leaderboard</a></li>
 
         </ul>
     </nav>
