Style the letters

--- a/app.html
+++ b/app.html
@@ -46,7 +46,7 @@
 
         <ul id="userInput" class="userInput" style="display: none;">
             <li>
-                <p style="font-size: 2rem;">Name: </p>
+                <p style="font-size: 3rem;font-style: italic;line-height: 1.5;font-family: Arial, sans-serif;;">Name: </p>
                 <input class="PersonInfoPanel" type="text" id="playerName" name="playerName" />
             </li>
             <li>
