small css changes of panel and buttons

--- a/app.html
+++ b/app.html
@@ -65,6 +65,31 @@
     </main>
 
     <footer id="footer">
+        <div class="socialNetworksTable">
+            <ul>
+                <li><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
+                            src="images/Youtube_logo new.png" height="auto" width="100%" /></a></li>
+                <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/x new logo.png"
+                            height="auto" width="100%" /></a></li>
+                <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
+                            src="images/instagram-logo-icone4.png" height="auto" width="100%" /></a></li>
+                <li> <a href="https://github.com/Desire32/Treasure-Hunt-Web-App" target="_blank"><img
+                            src="images/github.png" height="auto" width="100%" /></a></li>
+            </ul>
+        </div>
+    
+        <div class="teamTable">
+            <ul>
+                <li>
+                    <h1>Team Members Include:</h1>
+                </li>
+                <li>Orlando Ballard</li>
+                <li>Alexander Photiou</li>
+                <li>Nikita Markov</li>
+                <li>Constantinos koliaros</li>
+                <li>Giorgos Poullou</li>
+            </ul>
+        </div>
     </footer>
 
     <script src='js/burger-menu.js'></script> 
