Added Black Box Unit Test for text input boxes to the testing Space. Also Fixed Issue with the Footer covering content on several Pages by adding bottom padding in Main and adding a div in the leaderboard which also adds botom padding to push the footer down.

--- a/test.html
+++ b/test.html
@@ -41,7 +41,11 @@
   </nav>
 
   <main>
-    
+    <div class="frontPage" id="testText">
+       <h1>Test Log:</h1>
+      <h2>26/03/24 16:00. TextBox Unit test</h2>
+      <img src="images/NameTextBox Unit Test Table.png" alt="First Test Table Image." width ="100%" height="auto">
+    </div>
   </main>
 
   <footer id="footer">
