--- a/leaderboard.html
+++ b/leaderboard.html
@@ -88,6 +88,7 @@
           font-size: 24px;
       }
   </style>
+    <div id="footerSpace"></div>
 
 <footer id="footer">
     <div class="socialNetworksTable">
