add logo and fix same buttons

--- a/app.html
+++ b/app.html
@@ -43,6 +43,7 @@
 
     <main>
 
+        <img id="robot" src="images/logo.png" alt="logo Uni">
         <ul id="treasureHunts"></ul>
 
         <ul id="userInput" class="userInput" style="display: none;">
