Updated Unit Tests Log based on changes to the text input boxes

--- a/test.html
+++ b/test.html
@@ -38,13 +38,15 @@
       <li><a href="leaderboard.html">Leaderboard</a></li>
   
     </ul>
-  </nav>
+  </nav>p
 
   <main>
     <div class="frontPage" id="testText">
-       <h1>Test Log:</h1>
-      <h2>26/03/24 16:00. TextBox Unit test</h2>
+       <h1>Unit Tests Log:</h1>
+      <h2>26/03/24 16:00. TextBox Unit Test:</h2>
       <img src="images/NameTextBox Unit Test Table.png" alt="First Test Table Image." width ="100%" height="auto">
+      <h2>26/03/24 17:23. TextBox Unit Test Update After Some Fixes:</h2>
+      <img src="images/NameTextBox Unit Test Table Two.png" alt="Secon Test Table Image " width ="100%" height="auto">
     </div>
   </main>
 
