basic leaderboard(Constantinos part)

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -117,7 +117,11 @@
         </ul>
     </div>
 </footer>
-  </body>
+
+
+<script src="js/leaderboard.js"></script>
+<script src="js/cookies.js"></script>
+   </body>
   
 </html>
   
