--- a/app.html
+++ b/app.html
@@ -52,7 +52,7 @@
                 <input class="PersonInfoPanel" type="text" id="playerName" name="playerName" />
             </li>
             <li>
-                <input class="PersonInfoPanel" style="display: block;" id="nameButton" type="button" value="Start" />
+                <input class="StarButton" style="display: block;" id="nameButton" type="button" value="Start" />
             </li>
         </ul>
 
