--- a/notes.html
+++ b/notes.html
@@ -9,6 +9,21 @@
   <link rel="stylesheet" type="text/css" href="css/main.css" /> 
 </head>
 
+<style>
+  .date{
+    font-size: 2rem;
+  }
+  .frontPage p {
+    margin-top: 2%;
+    font-weight: 600;
+    font-size: 2.4rem;
+    color:blueviolet
+  }
+  .frontPage li{
+    font-size: 2.2rem;
+  }
+</style>
+
 <body>
   <header class="header-main" id="header">
     <div class="header-main-logo">
@@ -41,26 +56,26 @@
   <ul>
     <div class="frontPage">
 
-  <h2>Page for note taking manages by AlexPH for the team work path on the marking scheme and to help the team out to know
+  <p>Page for note taking manages by AlexPH for the team work path on the marking scheme and to help the team out to know
     what everyone has done and is working on to help stop confusion.
 
     Due to our team members changing because of some absent individuals and the closure of some other teams we started
-    allot later than many of the other teams which means we need to work more as a team and harder to reach the deadline.</h2>
+    allot later than many of the other teams which means we need to work more as a team and harder to reach the deadline.<p>
 
-    <h2>22/3 lesson time</h2>
-      <li> <h2>Everyone is working and updating the code AlexPh and Orlando have worked extensive on the landing page by
+    <h2 class="date">22/3 lesson time</h2>
+      <li>Everyone is working and updating the code AlexPh and Orlando have worked extensive on the landing page by
       adding url and correct icons for all the teams social medias updating the names of the valid team members
       and editing the css files to edit text size, spacing, background font color and more. AlexPh will also add a
       picture of the finished landing page to our instagram and x accounts. Nikita worked on uniting the js files while
       also working on the api by designing registering the answers and the questions fixed api reader and general fixes
-      of the code added so far.</h2></li>
+      of the code added so far.</li>
 
-    <h2>23-24/3 During the weekend</h2>
-      <li><h2>Nikita further worked on advancing the api by adding a skip score and a fixed score panel of 80%
+    <h2 class="date">23-24/3 During the weekend</h2>
+      <li>Nikita further worked on advancing the api by adding a skip score and a fixed score panel of 80%
       Orlando worked further on the landing page by adding polish for different screen sizes and devices.Merged remote-tracking
-      branch 'origin/main' while Constantinos created the leaderboard html.</h2></li>
+      branch 'origin/main' while Constantinos created the leaderboard html.</li>
 
-    <h1>25/3 During the week</h1>
+    <h2 class="date">25/3 During the week</h2>
       <li>Nikita Advanced the api by adding cookies and basic location gathering with a script adding alerts for players exiting or not in the
       boundaries for the questions while also further fixing the leaderboard panel. Giorgos added buttons to begin the treasure hunt
       while Costantinos added a table to the leaderboard html file.Due to some changes to our landing page AlexPh had added this info to our
