--- a/leaderboard.html
+++ b/leaderboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Leaderboard</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/header.css" />
@@ -72,7 +72,6 @@
         </ul>
     </div>
 </footer>
-
 
 <script src="js/leaderboard.js"></script>
 <script src="js/cookies.js"></script>
