Previous added new notes now adding those notes to the html notes page

--- a/notes.html
+++ b/notes.html
@@ -80,6 +80,14 @@
       boundaries for the questions while also further fixing the leaderboard panel. Giorgos added buttons to begin the treasure hunt
       while Costantinos added a table to the leaderboard html file.Due to some changes to our landing page AlexPh had added this info to our
       social media accounts with photo evidence to instagram and x.</li>
+
+      <h2 class="date">26/3 During the weekend</h2>
+      <li>Nikita Has done various fixes with the code including the score panel, general cookies, leaderboard button api questions and location
+        tracking fixes Orlando added black box unit for text input boxes for testing,General small font changes added logos and updated unit
+        tests logs.Alex worked on the social medias but changing them from personal to busyness accounts could not be done until engagement
+        was shows on the pages.Also increased engagement with the public by adding tags to new posts.</li>
+
+
     </div>
   </ul>
   </main>
