debug(dont count)

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -73,6 +73,7 @@
     </div>
 </footer>
 
+<script src="js/questionPage.js"></script>
 <script src="js/leaderboard.js"></script>
 <script src="js/cookies.js"></script>
    </body>
