fix some borders and footer

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -41,8 +41,9 @@
         </ul>
     </nav>
 
+    <main>
     <div id="tableContainer"></div>
-    
+    </main>
     <div id="footerSpace"></div>
 
 <footer id="footer">
