--- a/leaderboard.html
+++ b/leaderboard.html
@@ -42,7 +42,10 @@
     </nav>
 
     <main>
-    <div id="tableContainer"></div>
+    <div id="tableContainer">
+    <button id="sortButton">Sort by Points</button>
+
+    </div>
     </main>
     <div id="footerSpace"></div>
 
