--- a/leaderboard.html
+++ b/leaderboard.html
@@ -43,6 +43,7 @@
 
     <main>
         <button id="sortButton">Sort by Points</button>
+        <button id="resetButton">Reset</button>
     <div id="tableContainer">
 
     </div>
