basic buttons leaderboard styling

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -42,8 +42,10 @@
     </nav>
 
     <main>
+        <div class="buttonsContainer">
         <button id="sortButton">Sort by Points</button>
         <button id="resetButton">Reset</button>
+        </div>
     <div id="tableContainer">
 
     </div>
