--- a/notes.html
+++ b/notes.html
@@ -27,7 +27,9 @@
 <body>
   <header class="header-main" id="header">
     <div class="header-main-logo">
-      <img src="images/logo.png" alt="logo Uni">
+      <a href="index.html">
+        <img src="images/logo.png" alt="logo Uni" id="logo">
+      </a>
       <div class="header-main-name">Treasure Hunt</div>
     </div>
     <nav class="header-main-nav">
