discord link footer

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                             src="images/instagram-logo-icone4.png" height="auto" width="100%" /></a></li>
                 <li> <a href="https://github.com/Desire32/Treasure-Hunt-Web-App" target="_blank"><img
                             src="images/github.png" height="auto" width="100%" /></a></li>
+                <li> <a href="https://discord.com/channels/@me/1218189609947893794/1221559334761136328" target="_blank"><img src="images/discord.png"
+                            height="auto" width="100%" /></a></li>
             </ul>
         </div>
 
