--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <main>
         <div class="frontPage">
             <h1>Our Project aims to develop a fully functional Treasure Hunt Web app.</h1>
+            <p class="descriptionIndex">We present to your attention to the Treasure Hunt, in which you will take part in a quiz of various questions in order to get a chance to become the first in the table of record holders!</p>
             <a href="app.html" id="buttonStart">Let's get started!</a>
         </div>
     </main>
