--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <img src="images/logo.png" alt="logo Uni" id="logo">
             </a>
             <div class="header-main-name">Treasure Hunt</div>
+            <div class="header-main-name" id="score" style="display: none;"></div>
         </div>
         <nav class="header-main-nav">
             <ul class="logoList">
