--- a/leaderboard.html
+++ b/leaderboard.html
@@ -44,6 +44,7 @@
     </nav>
 
     <main>
+        <h1>Leaderboard</h1>
         <div class="buttonsContainer">
         <button id="sortButton">Sort by Points</button>
         <button id="resetButton">Reset</button>
