name fix button leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -47,7 +47,7 @@
         <h1>Leaderboard</h1>
         <div class="buttonsContainer">
         <button id="sortButton">Sort by Points</button>
-        <button id="resetButton">Reset</button>
+        <button id="resetButton">Reload</button>
         </div>
     <div id="tableContainer">
 
