Updates test Page to split it into multiple Sections. Added multiple Tables for testing, including an updataed unit test for the start API, some User Acceptance Testing, and a Heuristic Evaluation

--- a/test.html
+++ b/test.html
@@ -43,12 +43,11 @@
   </nav>p
 
   <main>
-    <div class="frontPage" id="testText">
-       <h1>Unit Tests Log:</h1>
-      <h2>26/03/24 16:00. TextBox Unit Test:</h2>
-      <img src="images/NameTextBox Unit Test Table.png" alt="First Test Table Image." width ="100%" height="auto">
-      <h2>26/03/24 17:23. TextBox Unit Test Update After Some Fixes:</h2>
-      <img src="images/NameTextBox Unit Test Table Two.png" alt="Secon Test Table Image " width ="100%" height="auto">
+    <div id="testLinks">
+      <h1><a href="unit_testing.html">Unit Testing</a></h1>
+      <h1><a href="user_acceptance.html">User Acceptance Testing</a></h1>
+      <h1><a href="heuristic_evaluation.html">Heuristic Evaluation</a></h1>
+
     </div>
   </main>
 
