--- a/notes.html
+++ b/notes.html
@@ -6,23 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notes</title>
   <link rel="stylesheet" type="text/css" href="css/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/main.css" /> 
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 
 <style>
-  .date{
+  .date {
     font-size: 2rem;
   }
+
   .frontPage p {
     margin-top: 2%;
-    font-weight: 600;
-    font-size: 2.4rem;
-    color:blueviolet
+    font-style: italic;
+    font-size: 1.8rem;
   }
-  .frontPage li{
-    font-size: 2.2rem;
+
+  .frontPage li {
+    font-size: 2rem;
   }
-</style>
+
+  .frontPage ul {
+    list-style-type: circle;
+    padding-left: 0;
+  }
+
+  .frontPage{
+    margin: 2% 2% 2% 2%;
+  }
+
+  </style>
 
 <body>
   <header class="header-main" id="header">
@@ -55,42 +66,46 @@
   
     </ul>
   </nav>
-  <ul>
-    <div class="frontPage">
-
-  <p>Page for note taking manages by AlexPH for the team work path on the marking scheme and to help the team out to know
-    what everyone has done and is working on to help stop confusion.
-
-    Due to our team members changing because of some absent individuals and the closure of some other teams we started
-    allot later than many of the other teams which means we need to work more as a team and harder to reach the deadline.<p>
-
-    <h2 class="date">22/3 lesson time</h2>
-      <li>Everyone is working and updating the code AlexPh and Orlando have worked extensive on the landing page by
-      adding url and correct icons for all the teams social medias updating the names of the valid team members
-      and editing the css files to edit text size, spacing, background font color and more. AlexPh will also add a
-      picture of the finished landing page to our instagram and x accounts. Nikita worked on uniting the js files while
-      also working on the api by designing registering the answers and the questions fixed api reader and general fixes
-      of the code added so far.</li>
-
-    <h2 class="date">23-24/3 During the weekend</h2>
-      <li>Nikita further worked on advancing the api by adding a skip score and a fixed score panel of 80%
-      Orlando worked further on the landing page by adding polish for different screen sizes and devices.Merged remote-tracking
-      branch 'origin/main' while Constantinos created the leaderboard html.</li>
-
-    <h2 class="date">25/3 During the week</h2>
-      <li>Nikita Advanced the api by adding cookies and basic location gathering with a script adding alerts for players exiting or not in the
-      boundaries for the questions while also further fixing the leaderboard panel. Giorgos added buttons to begin the treasure hunt
-      while Costantinos added a table to the leaderboard html file.Due to some changes to our landing page AlexPh had added this info to our
-      social media accounts with photo evidence to instagram and x.</li>
-
+  <ul class="frontPage">
+    <li>
+      <h2 class="date">22/3 lesson time</h2>
+      <p>Everyone is working and updating the code AlexPh and Orlando have worked extensive on the landing page by
+        adding url and correct icons for all the teams social medias updating the names of the valid team members
+        and editing the css files to edit text size, spacing, background font color and more. AlexPh will also add a
+        picture of the finished landing page to our instagram and x accounts. Nikita worked on uniting the js files while
+        also working on the api by designing registering the answers and the questions fixed api reader and general fixes
+        of the code added so far.</p>
+    </li>
+  
+    <li>
+      <h2 class="date">23-24/3 During the weekend</h2>
+      <p>Nikita further worked on advancing the api by adding a skip score and a fixed score panel of 80%
+        Orlando worked further on the landing page by adding polish for different screen sizes and devices.Merged
+        remote-tracking
+        branch 'origin/main' while Constantinos created the leaderboard html.</p>
+    </li>
+  
+    <li>
+      <h2 class="date">25/3 During the week</h2>
+      <p>Nikita Advanced the api by adding cookies and basic location gathering with a script adding alerts for players
+        exiting or not in the
+        boundaries for the questions while also further fixing the leaderboard panel. Giorgos added buttons to begin the
+        treasure hunt
+        while Costantinos added a table to the leaderboard html file.Due to some changes to our landing page AlexPh had
+        added this info to our
+        social media accounts with photo evidence to instagram and x.</p>
+    </li>
+  
+    <li>
       <h2 class="date">26/3 During the weekend</h2>
-      <li>Nikita Has done various fixes with the code including the score panel, general cookies, leaderboard button api questions and location
-        tracking fixes Orlando added black box unit for text input boxes for testing,General small font changes added logos and updated unit
-        tests logs.Alex worked on the social medias but changing them from personal to busyness accounts could not be done until engagement
-        was shows on the pages.Also increased engagement with the public by adding tags to new posts.</li>
-
-
-    </div>
+      <p>Nikita Has done various fixes with the code including the score panel, general cookies, leaderboard button api
+        questions and location
+        tracking fixes Orlando added black box unit for text input boxes for testing,General small font changes added
+        logos and updated unit
+        tests logs.Alex worked on the social medias but changing them from personal to busyness accounts could not be done
+        until engagement
+        was shows on the pages.Also increased engagement with the public by adding tags to new posts.</p>
+    </li>
   </ul>
   </main>
 
