--- a/heuristic_evaluation.html
+++ b/heuristic_evaluation.html
@@ -13,15 +13,18 @@
 
 <header class="header-main" id="header">
     <div class="header-main-logo">
-        <img src="images/logo.png" alt="logo Uni">
+        <a href="index.html">
+            <img src="images/logo.png" alt="logo Uni" id="logo">
+        </a>
         <div class="header-main-name">Treasure Hunt</div>
+        <div class="header-main-name" id="score" style="display: none;"></div>
     </div>
     <nav class="header-main-nav">
         <ul class="logoList">
             <li><a href="index.html">Main page</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="test.html">Test</a></li>
-            <li><a href="leaderboard.html">Leaderboard</a></li>
+            <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
 
         </ul>
     </nav>
@@ -35,10 +38,10 @@
         <li><a href="index.html">Main page</a></li>
         <li><a href="notes.html">Notes</a></li>
         <li><a href="test.html">Test</a></li>
-        <li><a href="leaderboard.html">Leaderboard</a></li>
+        <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
 
     </ul>
-</nav>p
+</nav>
 
 <main>
     <div class="frontPage" id="testText">
