--- a/notes.html
+++ b/notes.html
@@ -36,19 +36,21 @@
   </style>
 
 <body>
+  
   <header class="header-main" id="header">
     <div class="header-main-logo">
       <a href="index.html">
         <img src="images/logo.png" alt="logo Uni" id="logo">
       </a>
       <div class="header-main-name">Treasure Hunt</div>
+      <div class="header-main-name" id="score" style="display: none;"></div>
     </div>
     <nav class="header-main-nav">
       <ul class="logoList">
         <li><a href="index.html">Main page</a></li>
         <li><a href="notes.html">Notes</a></li>
         <li><a href="test.html">Test</a></li>
-        <li><a href="leaderboard.html">Leaderboard</a></li>
+        <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
   
       </ul>
     </nav>
@@ -62,7 +64,7 @@
       <li><a href="index.html">Main page</a></li>
       <li><a href="notes.html">Notes</a></li>
       <li><a href="test.html">Test</a></li>
-      <li><a href="leaderboard.html">Leaderboard</a></li>
+      <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
   
     </ul>
   </nav>
