--- a/notes.html
+++ b/notes.html
@@ -50,7 +50,7 @@
         <li><a href="index.html">Main page</a></li>
         <li><a href="notes.html">Notes</a></li>
         <li><a href="test.html">Test</a></li>
-        <li><a href="leaderboard.html" id="leaderboard-link">Leaderboard</a></li>
+        <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
   
       </ul>
     </nav>
@@ -64,7 +64,7 @@
       <li><a href="index.html">Main page</a></li>
       <li><a href="notes.html">Notes</a></li>
       <li><a href="test.html">Test</a></li>
-      <li><a href="leaderboard.html" id="leaderboard-link">Leaderboard</a></li>
+      <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
   
     </ul>
   </nav>
