--- a/unit_testing.html
+++ b/unit_testing.html
@@ -24,7 +24,7 @@
             <li><a href="index.html">Main page</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="test.html">Test</a></li>
-            <li><a href="leaderboard.html" id="leaderboard-link">Leaderboard</a></li>
+            <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
 
         </ul>
     </nav>
@@ -38,7 +38,7 @@
         <li><a href="index.html">Main page</a></li>
         <li><a href="notes.html">Notes</a></li>
         <li><a href="test.html">Test</a></li>
-        <li><a href="leaderboard.html" id="leaderboard-link">Leaderboard</a></li>
+        <li><a href="leaderboard.html" class="leaderboard-link">Leaderboard</a></li>
 
     </ul>
 </nav>
