--- a/leaderboard.html
+++ b/leaderboard.html
@@ -85,7 +85,7 @@
         </ul>
     </div>
 </footer>
-
+<script src='js/burger-menu.js'></script>
 <script src="js/cookies.js"></script>
 <script src="js/leaderboard.js"></script>
    </body>
