--- a/app.html
+++ b/app.html
@@ -18,6 +18,7 @@
             </a>
             <div class="header-main-name">Treasure Hunt</div>
             <div class="header-main-name" id="score" style="display: none;"></div>
+            <img src="images/QR_Code.png" id="qrCode" alt="QR_Code" style="display: none;">
         </div>
         <nav class="header-main-nav">
             <ul class="logoList">
