basic stuff for qrcode

--- a/app.html
+++ b/app.html
@@ -49,6 +49,12 @@
         <img id="robot" src="images/logo.png" alt="logo Uni">
         <ul id="treasureHunts"></ul>
 
+        <video id="preview"></video>
+
+        <button id="button">Start Camera</button>
+        
+        <div id="content"></div>
+
         <ul id="userInput" class="userInput" style="display: none;">
             <li>
                 <p style="font-size: 3rem;font-style: italic;line-height: 1.5;font-family: Arial, sans-serif;;">Name: </p>
