--- a/app.html
+++ b/app.html
@@ -51,9 +51,9 @@
 
         <video id="preview"></video>
 
-        <button id="button">Start Camera</button>
+        <button id="CameraButton">Start Camera</button>
         
-        <div id="content"></div>
+        <div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>
 
         <ul id="userInput" class="userInput" style="display: none;">
             <li>
@@ -64,7 +64,6 @@
                 <input class="StarButton" style="display: block;" id="nameButton" type="button" value="Start" />
             </li>
         </ul>
-
 
 
         <ul class="PersonInfoPanel" id="questionField" style="display: none;">
