qr code switch camera

--- a/app.html
+++ b/app.html
@@ -52,6 +52,9 @@
         <video id="preview"></video>
 
         <button id="CameraButton">Start Camera</button>
+
+        <button id="SwitchCameraButton">Switch Camera</button>
+
         
         <div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>
 
