--- a/app.html
+++ b/app.html
@@ -64,6 +64,8 @@
 
         <!---<button id="CameraButton" style="display:none">Start Camera</button>-->
 
+        <img src="images/QR_Code.png" id="CameraButton" alt="QR_Code ">
+
 
         <!--<div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>-->
 
