debug switch button

--- a/app.html
+++ b/app.html
@@ -62,9 +62,10 @@
 
         <video id="preview" autoplay="autoplay" style="transform: scaleX(-1);" class="active"></video>
 
-        <!---<button id="CameraButton" style="display:none">Start Camera</button>-->
+        
 
         <img src="images/QR_Code.png" id="CameraButton" alt="QR_Code ">
+        <button id="SwitchCameraButton" style="font-size: 2rem;">Switch</button>
 
 
         <!--<div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>-->
