--- a/app.html
+++ b/app.html
@@ -64,8 +64,7 @@
 
         
 
-        <img src="images/QR_Code.png" id="CameraButton" alt="QR_Code ">
-        <button id="SwitchCameraButton" style="font-size: 2rem;">Switch</button>
+        <!--<button id="SwitchCameraButton" style="font-size: 2rem;">Switch</button>-->
 
 
         <!--<div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>-->
@@ -86,6 +85,7 @@
                 <input class="PersonInfoPanel" type="text" id="playerAnswer" name="playerAnswer" />
             </li>
         </ul>
+        <img src="images/QR_Code.png" id="CameraButton" style="display: none;" alt="QR_Code">
 
     </main>
 
